[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "JFM"
version = "0.0.1"

description = "Wander the ups and downs of Reddit and capture memories."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"