[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "JFM"
version = "0.0.0"
description = "Todo"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jensboe/JFM"
"Bug Tracker" = "https://github.com/jensboe/JFM/issues"