[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "JFM"
authors = [
    {name = "jensboe", email = "jensboe@outlook.de"},
]
version = "1.0.0"
description = "JFM is an django website which can manage participation lists."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jensboe/JFM"
"Bug Tracker" = "https://github.com/jensboe/JFM/issues"