[project.urls]
"Homepage" = "https://github.com/jensboe/JFM"
"Bug Tracker" = "https://github.com/jensboe/JFM/issues"

[tool.poetry]
name = "jfm-backend"
version = "1.1.0"
description = ""
authors = ["Jens Böckmann <jensboe@outlook.de>"]
readme = "README.md"
packages = [{include = "jfm_backend"}]

[tool.poetry.dependencies]
python = "^3.7"
Django = "*"
djangorestframework = "*"
django-ical = "*"
django-cors-headers = "*"
django-cleanup = "*"
django-browser-reload = "*"
django-filter = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"